# drokar

./: .gitignore  README.md  asset-manifest.json  index.html  manifest.json
drokar-JS/drokar/: package-lock.json  package.json
drokar-JS/drokar/src/: App.js
drokar-JS/v0/: main.js  render.js
drokar-Py/: .gitignore  build.bat  compile.py  pyproject.toml  setup.cfg  setup.py
drokar-Py/src/drokar/: Client.py  Entity.py  Item.py  Menu.py  Skill.py
drokar-Py/src/drokar/static/: globals.css
drokar-Py/src/drokar/templates/: base.html  index.html  skillpage_base.html
drokar-js/: README.md  Tasks.js  package-lock.json  package.json
drokar-js/public/: index.html
drokar-js/src/: App.css  App.js
drokar-js/src/components/: AbilityClassWindow.js  AbilityEquippedWindow.js  AbilityRow.js  AbilityWindow.css  AbilityWindow.js  Combat.css  CombatDetails.js  CombatFrame.js  CombatTasks.js  Drawer.js  Equipment.css  Equipment.js  Events.js  Inventory.css  Inventory.js  InventoryItem.js  ItemInfoPanel.css  ItemInfoPanel.js  ItemWindow.js  LevelProgress.js  Menu.js  MonsterTasks.js  (+6 more)
orig/: index.html  package-lock.json  package.json  style.css
project/: pyproject.toml
static/css/: main.1859813a.css  main.1859813a.css.map  main.2047d39a.css  main.2047d39a.css.map  main.7858802d.css  main.7858802d.css.map
static/js/: 453.80d87281.chunk.js  453.80d87281.chunk.js.map  885.7f453b81.chunk.js  885.7f453b81.chunk.js.map  main.2871e09e.js  main.2871e09e.js.map  main.a0cf70c7.js  main.a0cf70c7.js.map  main.d418b95b.js  main.d418b95b.js.map  main.d6375e15.js  main.d6375e15.js.map
(+7 files in other folders)
