[metadata]
name = drokar
version = 0.0.1
author = Joel Kirkby
description = Drokar - Idle Adventure
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Windows

url= https://github.com/JoelKirkby/drokar

project_urls=
    Bug-Tracker = https://github.com/JoelKirkby/drokar/issues
    
[options]
install_requires =
    numpy

[options.package_data]

drokar =
    assets/*

[options.entry_points]
console_scripts =
    drokar = drokar.Client:main